# kestrai

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  buf.gen.yaml  buf.yaml  go.mod  go.sum  go.work  kestrai-claude-code-prompt.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml
cmd/kestrai/: main.go
internal/auth/: auth.go  auth_test.go  context.go  interceptor.go  localdev.go  statictoken.go
internal/cli/: apply.go  apply_get_test.go  cli_test.go  client.go  codec.go  codec_test.go  config.go  get.go  output.go  root.go  server.go  up.go  version.go
internal/reconciler/: reconciler.go  reconciler_test.go
internal/server/: crud_test.go  project.go  resources.go  server.go  server_test.go  system.go  workflow.go
internal/store/: migrate.go  sqlite.go  store.go  store_test.go
internal/store/migrations/: 0001_init.sql
internal/version/: version.go
proto/kestrai/v1alpha1/: meta.proto  project.proto  service.proto  workflow.proto
scripts/: check-license-headers.sh
sdk/python/: README.md  pyproject.toml
sdk/python/kestrai/: __init__.py
sdk/python/tests/: test_smoke.py
sdk/typescript/: README.md  package.json
web/: README.md  package.json
