# Kestrai Python uv workspace root.
#
# This file is intentionally a "virtual" workspace root — it has no [project]
# section, only the workspace declaration. Real Python packages live under
# members listed below. Add a new line here when you add a new Python package
# to the monorepo.

[tool.uv.workspace]
members = ["sdk/python"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Conservative starter set. Tighten as the codebase grows.
select = ["E", "F", "I", "B", "UP", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["sdk/python/tests"]
addopts = "-q"
