[project]
name = "kestrai"
version = "0.0.0.dev0"
description = "Python agent SDK for Kestrai — the Kubernetes of AI agents."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "The Kestrai Authors" }]
keywords = ["kestrai", "agents", "ai", "orchestration"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://kestrai.dev"
Repository = "https://github.com/kestrai/kestrai"
Documentation = "https://kestrai.dev/docs"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kestrai"]
